1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gafizi.ads: Add pragma Linker_Options ("-lz") to drag the zlib 
	in the executable.

	* garcon.txt: New file containing the header to use for static
	platform specific files.

	* constants.sh: Add code to generate the platform specific file

	* Makefile.am: Add more flexibility in the build and install
	process for filters.
	If a platform specific file could be found, use it instead of
	building it.
	Replace ${} by $() so that it doesn't confuse automake any longer.

	* Makefile.zip: Install libz.a only when no zlib has been found on 
	the system at configure time.

1999-04-10  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb: Change Tasking_Soft_Links into Soft_Links. This
	unit is needed for Abort_Defer and Abort_Undefer.

1999-02-17  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuni.adb: Do not try to send a reply to a pending request to 
	a dead partition as it will cause a lockup in the runtime.

	* s-garpar.ads, s-garpar.adb: (Is_Dead): New function that tests
	if a partition is known as being dead.

	* s-gargro.adb: Barrier has been replaced by a mutex (Group_Mutex) 
	as its only purpose is to provide non-reentrant mutual exclusion.

1999-02-16  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.c, config.h.in: Use string.h if present, needed on
	Digital Unix.

	* makedall: New script that updates the debugging scripts
	automatically.

	* DALL, UNDALL, DALL.el, UNDALL.el: Updated using makedall.

	* s-garstr.adb: Dump streams only when a specific key *and*
	S_GARSTR are set to avoid clobbering the output with large dumps.

	* s-gartcp.adb: Do not try to connect with a peer that has no
	location (light PCS for example).

	* s-garuni.adb: Minor reformatting.
	(Store_New_Unit): Change name New_Unit_Info to Current_Info as the 
	former was misleading. Add more debugging info. A unit can be in
	the Queried state after a failure if the client needs it anyway,