@@ -1,5 +1,9 @@
 1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>
 
+	* 5sgarcon.ads: New constant file for Solaris.
+
+	* 5lgarcon.ads: New constant file for Linux.
+
 	* s-gafizi.ads: Add pragma Linker_Options ("-lz") to drag the zlib 
 	in the executable.
 
